@@ -318,6 +318,9 @@ SCIP_RETCODE SCIPstatUpdateVarRootLPBestEstimate(
 
 
 /** prints a debug message */
+#ifdef __GNUC__
+__attribute__((format(printf, 4, 5)))
+#endif
 SCIP_EXPORT
 void SCIPstatPrintDebugMessage(
    SCIP_STAT*            stat,               /**< SCIP statistics */
@@ -328,6 +331,9 @@ void SCIPstatPrintDebugMessage(
    );
 
 /** prints a debug message without precode */
+#ifdef __GNUC__
+__attribute__((format(printf, 2, 3)))
+#endif
 SCIP_EXPORT
 void SCIPstatDebugMessagePrint(
    SCIP_STAT*            stat,               /**< SCIP statistics */
