@@ -25,6 +25,10 @@ Interface changes
 - New function SCIPcreateConsBounddisjunctionRedundant() and SCIPcreateConsBasicBounddisjunctionRedundant() that allow
   the input to contain redundant literals.
 
+### Changed API functions
+- added __attribute__((format(printf,,,))) to variadic SCIP message printing functions;
+  this enable warnings about mismatches between format string and variadic function arguments if using GCC
+
 ### Command line interface
 
 ### Interfaces to external software
